--- a/app/src/main/res/layout/activity_create_article.xml
+++ b/app/src/main/res/layout/activity_create_article.xml
@@ -15,16 +15,17 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
     <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:ems="10"
             android:id="@+id/descriptionArticle" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/titreArticle" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.25" android:layout_marginBottom="477dp"
-            app:layout_constraintBottom_toTopOf="@+id/Post" android:hint="Description"/>
+            android:hint="Description"
+            android:textAlignment="viewStart" app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            app:layout_constraintHorizontal_bias="0.25" android:selectAllOnFocus="false" android:singleLine="false"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/Post"
+            app:layout_constraintVertical_bias="0.0" android:maxLines="20"/>
     <Button
             android:text="Post"
             android:layout_width="wrap_content"
@@ -32,8 +33,7 @@
             android:id="@+id/Post" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/descriptionArticle"
-            app:layout_constraintVertical_bias="1.0"/>
+    />
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,5 +43,5 @@
             app:layout_constraintTop_toBottomOf="@+id/Titre" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.25"
-            android:hint="Titre"/>
+            android:hint="Titre" android:selectAllOnFocus="false"/>
 </android.support.constraint.ConstraintLayout>
