--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -10,7 +10,7 @@
     <ImageView
             android:layout_width="48dp"
             android:layout_height="45dp" tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/imageView"
+            android:id="@+id/PhotoView"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
@@ -19,13 +19,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/AuthorNameView"
-            app:layout_constraintTop_toTopOf="@+id/imageView" app:layout_constraintStart_toEndOf="@+id/imageView"
-            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"/>
+            app:layout_constraintTop_toTopOf="@+id/PhotoView" app:layout_constraintStart_toEndOf="@+id/PhotoView"
+            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="@+id/PhotoView"/>
     <MultiAutoCompleteTextView
             android:layout_width="338dp"
             android:layout_height="wrap_content"
-            android:id="@+id/multiAutoCompleteTextView"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
+            android:id="@+id/DescriptionView"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/PhotoView"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
     />
@@ -34,7 +34,7 @@
             android:layout_width="103dp"
             android:layout_height="wrap_content"
             android:id="@+id/CommentButton" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/multiAutoCompleteTextView"
+            app:layout_constraintTop_toBottomOf="@+id/DescriptionView"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toStartOf="@+id/LikeButton" android:textColor="@color/colorAccent"
             android:background="@color/colorPrimary"/>
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/LikeButton" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/multiAutoCompleteTextView"
+            app:layout_constraintTop_toBottomOf="@+id/DescriptionView"
             app:layout_constraintStart_toEndOf="@+id/CommentButton" app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorAccent"
             android:background="@color/colorPrimary"/>
