--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,4 +7,112 @@
         android:layout_height="match_parent"
         tools:context=".SignupActivity">
 
+    <TextView
+            android:text="TwiBook"
+            android:layout_width="78dp"
+            android:layout_height="25dp"
+            android:id="@+id/signup_activity_appname"
+            android:fontFamily="sans-serif-medium" android:textSize="20sp"
+            android:textColor="#3B5998" android:textAlignment="textStart"
+            android:layout_marginTop="28dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.974"/>
+    <ImageView
+            android:layout_width="75dp"
+            android:layout_height="75dp" app:srcCompat="@mipmap/logo_app"
+            android:id="@+id/signup_activity_applogo"
+            app:layout_constraintTop_toTopOf="@+id/signup_activity_appname"
+            app:layout_constraintBottom_toBottomOf="@+id/signup_activity_appname"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/signup_activity_appname"
+            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.378"
+    />
+    <EditText
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/signup_activity_nom_edittxt"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.505" android:layout_marginTop="45dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_activity_applogo"/>
+    <EditText
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:id="@+id/signup_activity_email_edittxt"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_activity_prenom_edittxt"/>
+    <EditText
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/signup_activity_mdp_edittxt"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_activity_email_edittxt"/>
+    <TextView
+            android:text="Nom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/signup_activity_nom_txt"
+            app:layout_constraintStart_toStartOf="@+id/signup_activity_nom_edittxt"
+            app:layout_constraintBottom_toTopOf="@+id/signup_activity_nom_edittxt"/>
+    <TextView
+            android:text="Prenom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/signup_activity_prenom_txt"
+            app:layout_constraintStart_toStartOf="@+id/signup_activity_prenom_edittxt"
+            app:layout_constraintBottom_toTopOf="@+id/signup_activity_prenom_edittxt"/>
+    <TextView
+            android:text="Email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/signup_activity_email_txt" app:layout_constraintStart_toStartOf="@+id/signup_activity_email_edittxt"
+            app:layout_constraintBottom_toTopOf="@+id/signup_activity_email_edittxt"/>
+    <TextView
+            android:text="Mot de passe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/signup_activity_mdp_txt" app:layout_constraintStart_toStartOf="@+id/signup_activity_mdp_edittxt"
+            app:layout_constraintBottom_toTopOf="@+id/signup_activity_mdp_edittxt"/>
+    <EditText
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/signup_activity_validmdp_edittxt"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_activity_mdp_edittxt"/>
+    <TextView
+            android:text="Confirmation mot de passe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/signup_activity_validmdp_txt" app:layout_constraintStart_toStartOf="@+id/signup_activity_validmdp_edittxt"
+            app:layout_constraintBottom_toTopOf="@+id/signup_activity_validmdp_edittxt"/>
+    <EditText
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/signup_activity_prenom_edittxt" android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_activity_nom_edittxt" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <Button
+            android:text="S'enregistrer"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:id="@+id/signup_activity_register_btn"
+            android:background="#3B5998" android:textColor="@android:color/white" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_activity_validmdp_edittxt"/>
+
 </android.support.constraint.ConstraintLayout>
