--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E05252</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#3B5998</color>
+    <color name="colorPrimaryDark">#36528C</color>
     <color name="colorAccent">#000000</color>
 </resources>
