--- a/app/src/main/res/layout/activity_create_article.xml
+++ b/app/src/main/res/layout/activity_create_article.xml
@@ -8,7 +8,7 @@
         tools:context=".CreateArticleActivity">
 
     <TextView
-            android:text="Création d'article"
+            android:text="@string/TitreArticle"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:id="@+id/Titre" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
@@ -20,14 +20,14 @@
             android:id="@+id/descriptionArticle" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/titreArticle" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:hint="Description"
+            android:hint="@string/Description"
             android:textAlignment="viewStart" app:layout_constraintStart_toStartOf="parent"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             app:layout_constraintHorizontal_bias="0.25" android:selectAllOnFocus="false" android:singleLine="false"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/Post"
             app:layout_constraintVertical_bias="0.0" android:maxLines="20"/>
     <Button
-            android:text="Post"
+            android:text="@string/Post"
             android:layout_width="wrap_content"
             android:layout_height="49dp"
             android:id="@+id/Post" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
@@ -43,5 +43,5 @@
             app:layout_constraintTop_toBottomOf="@+id/Titre" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.25"
-            android:hint="Titre" android:selectAllOnFocus="false"/>
+            android:hint="@string/Titre" android:selectAllOnFocus="false"/>
 </android.support.constraint.ConstraintLayout>
