--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,17 +8,23 @@
         tools:context=".HomeActivity">
 
     <TextView
-            android:text="Twibook"
+            android:text="@string/Twibook"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:id="@+id/Titre" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
     <Button
-            android:text="CreateArticle"
+            android:text="@string/TitreArticle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/CreateArticle" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/Titre"/>
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="395dp"
+            android:layout_height="608dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/CreateArticle" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:id="@+id/Wall"/>
 </android.support.constraint.ConstraintLayout>
